--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h2> Security of the future!</h2>
     <div class="w3-content w3-display-container">
 
-   <img class="mySlides" src="pic1.jpeg" style="width: 35%">
+   <img class="mySlides" src="pic1.jpeg" style="width: 35%; margin-left: 48%">
   <img class="mySlides" src="pic5.jpeg" style="width: 50%">
-  <img class="mySlides" src="pic3.jpeg" style="width: 35%">
-  <img class="mySlides" src="pic4.jpeg" style="width: 20%">
-  <img class="mySlides" src="pic9.jpeg" style="width: 20%">
-  <img class="mySlides" src="pic10.jpeg" style="width: 20%">
+  <img class="mySlides" src="pic3.jpeg" style="width: 35%; margin-left: 48%">
+  <img class="mySlides" src="pic4.jpeg" style="width: 20%; margin-left: 55%">
+  <img class="mySlides" src="pic9.jpeg" style="width: 20%; margin-left: 55%">
+  <img class="mySlides" src="pic10.jpeg" style="width: 20%; margin-left: 55%">
 <hr>
     <article>
     <h1 class="name"> Our Mission</h1>
