--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <h1 class="name">In-line Security</h1>
     <h2> Security of the future!</h2>
     <div class="w3-content w3-display-container">
-
-   <img class="mySlides" src="pic1.jpeg" style="width: 35%; margin-left: 48%">
-  <img class="mySlides" src="pic5.jpeg" style="width: 50%">
-  <img class="mySlides" src="pic3.jpeg" style="width: 35%; margin-left: 48%">
-  <img class="mySlides" src="pic4.jpeg" style="width: 20%; margin-left: 55%">
-  <img class="mySlides" src="pic9.jpeg" style="width: 20%; margin-left: 55%">
-  <img class="mySlides" src="pic10.jpeg" style="width: 20%; margin-left: 55%">
+@media and 
+   <img class="mySlides pic1" src="pic1.jpeg" style="width: 35%; margin-left: 40%">
+  <img class="mySlides pic2" src="pic5.jpeg" style="width: 50%">
+  <img class="mySlides pic3" src="pic3.jpeg" style="width: 35%; margin-left: 48%">
+  <img class="mySlides pic4" src="pic4.jpeg" style="width: 20%; margin-left: 48%">
+  <img class="mySlides pic5" src="pic9.jpeg" style="width: 20%; margin-left: 48%">
+  <img class="mySlides pic6" src="pic10.jpeg" style="width: 20%; margin-left: 48%">
 <hr>
     <article>
     <h1 class="name"> Our Mission</h1>
@@ -30,8 +30,9 @@
         <br><br> However, with In-Line Security, we offer a personal enforcement connection, that will aid in the first step in handling an emergency, ensuring that your best interest is always put first.
         <br><br>
          Allow  In-Line  Security to make those crucial decisions concerning the safety of all those involved during those hectic moments; make crooks think twice about entering your establishment or putting you in harms way.
-    </p><
+    </p>
 </article>
+
   <div class="wrapper">
     <!--Top menu -->
     <div class="sidebar">
