--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <ul>
         <li>
             <a href="index.html">
-                <span class="icon"> <i class="fa-solid fa-house-chimney" style=" font-size: 20px; color: #ff0000;"></i></span>
+                <span class="icon"> <i class="fa-solid fa-house-chimney" style=" font-size: 20px; color: #ff0000; margin-right: 20%;"></i></span>
                 <span>home</span>
             </a>
         </li>
@@ -101,6 +101,7 @@
              setTimeout(carousel, 4000); // Change image every 4 seconds
                   }
      </script>
+     <script src="https://kit.fontawesome.com/07f11fb614.js" crossorigin="anonymous"></script>
 </section>
     </div>
 </body>
